# cpp-algo-engine

./: .gitignore  CMakeLists.txt  README.md
data/: sample_text.txt
include/: AlgoEngine.h  ParallelEngine.h  StringMatcher.h
src/: AlgoEngine.cpp  ParallelEngine.cpp  StringMatcher.cpp  main.cpp
